  spaces.

* Order by several columns with inheritance.

* Fixed aggregators and accumulators with inheritance.

SQLObject 0.8.1
===============

Bug Fixes
---------

* ID columns are reverted back from INT UNSIGNED to INT for MySQL to be in
  accord with FOREIGN KEYs.

* Fixed return value from Firebird/MaxdbConnection.createTable().

SQLObject 0.7.4
===============

Bug Fixes
---------

* Another round of changes to create/drop the tables in the right order
  in the command-line client `sqlobject-admin`.

* Fixed a bug in UnicodeField - allow comparison with None.

SQLObject 0.7.3
===============

Released 30 Jan 2007.

Bug Fixes
---------

* Allow multiple MSSQL connections.

* Psycopg1 requires port to be a string; psycopg2 requires port to be an int.

* Fixed a bug in MSSQLConnection caused by column names being unicode.

* Fixed a bug in FirebirdConnection caused by column names having trailing
  spaces.

* Fixed a missed import in firebirdconnection.py.

* Remove a leading slash in FirebirdConnection.

* Fixed a bug in deep Inheritance tree.

SQLObject 0.7.2
===============

Released 20 Nov 2006.

Features & Interface
--------------------

* sqlbuilder.Select now supports JOINs exactly like SQLObject.select.

* destroySelf() removes the object from related joins.

Bug Fixes
---------

* Fixed a number of unicode-related problems with newer MySQLdb.

* If the DB API driver returns timedelta instead of time (MySQLdb does
  this) it is converted to time; but if the timedelta has days an exception
  is raised.

* Fixed a number of bugs in InheritableSQLObject related to foreign keys.

* Fixed a bug in InheritableSQLObject related to the order of tableRegistry
  dictionary.

* A bug fix that allows to use SQLObject with DateTime from Zope.

Documentation Added
-------------------

* Added "How can I define my own intermediate table in my Many-to-Many
  relationship?" to FAQ.

SQLObject 0.7.1
===============

Released 25 Sep 2006.

Features & Interface